{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 24,
  "lineage": "1a7cc13b-078d-47d4-a081-93caee23ce27",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc94a77533dc4c4d",
            "association_id": "eipassoc-09d590ebed7c79da6",
            "domain": "vpc",
            "id": "eipalloc-0fc94a77533dc4c4d",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0712ce8505a290e03",
            "private_dns": "ip-10-0-0-105.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.105",
            "public_dns": "ec2-54-180-53-124.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.53.124",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:312075035761:internet-gateway/igw-02405692f401f33c8",
            "id": "igw-02405692f401f33c8",
            "owner_id": "312075035761",
            "tags": {
              "Name": "terraform-101-igw"
            },
            "tags_all": {
              "Name": "terraform-101-igw"
            },
            "vpc_id": "vpc-0fd6c97fd82a92279"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc94a77533dc4c4d",
            "connectivity_type": "public",
            "id": "nat-0d4b3413f64931b09",
            "network_interface_id": "eni-0712ce8505a290e03",
            "private_ip": "10.0.0.105",
            "public_ip": "54.180.53.124",
            "subnet_id": "subnet-069d1bc3277ecc285",
            "tags": {
              "Name": "terraform-101-nat-gateway"
            },
            "tags_all": {
              "Name": "terraform-101-nat-gateway"
            }
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "aws_eip.nat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-057edc76ba13adb5d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d4b3413f64931b09",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-057edc76ba13adb5d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:312075035761:route-table/rtb-057edc76ba13adb5d",
            "id": "rtb-057edc76ba13adb5d",
            "owner_id": "312075035761",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-101-private-route-table"
            },
            "tags_all": {
              "Name": "terraform-101-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd6c97fd82a92279"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:312075035761:route-table/rtb-0f49431a4847103f8",
            "id": "rtb-0f49431a4847103f8",
            "owner_id": "312075035761",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02405692f401f33c8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-101-public-route-table"
            },
            "tags_all": {
              "Name": "terraform-101-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd6c97fd82a92279"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_associatrion_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092bd50d715ece341",
            "route_table_id": "rtb-057edc76ba13adb5d",
            "subnet_id": "subnet-0790919d1075e1b00"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_route_table.private",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_associatrion_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a68baf384037a63a",
            "route_table_id": "rtb-0f49431a4847103f8",
            "subnet_id": "subnet-069d1bc3277ecc285"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:312075035761:subnet/subnet-0790919d1075e1b00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0790919d1075e1b00",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "312075035761",
            "tags": {
              "Name": "terraform-101-private-subnet"
            },
            "tags_all": {
              "Name": "terraform-101-private-subnet"
            },
            "vpc_id": "vpc-0fd6c97fd82a92279"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:312075035761:subnet/subnet-069d1bc3277ecc285",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-069d1bc3277ecc285",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "312075035761",
            "tags": {
              "Name": "terraform-101-public-subnet"
            },
            "tags_all": {
              "Name": "terraform-101-public-subnet"
            },
            "vpc_id": "vpc-0fd6c97fd82a92279"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:312075035761:vpc/vpc-0fd6c97fd82a92279",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-032538e2135f798e8",
            "default_route_table_id": "rtb-0f5bd04c43027ddf8",
            "default_security_group_id": "sg-0101c757dcf7d81f3",
            "dhcp_options_id": "dopt-c57ac3ae",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fd6c97fd82a92279",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f5bd04c43027ddf8",
            "owner_id": "312075035761",
            "tags": {
              "Name": "terraform-101"
            },
            "tags_all": {
              "Name": "terraform-101"
            }
          }
        }
      ]
    }
  ]
}